<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="398dp"
        android:layout_height="200dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTwo"
        app:srcCompat="@drawable/aceldia" />

    <EditText
        android:id="@+id/etNumberT"
        android:layout_width="122dp"
        android:layout_height="54dp"
        android:layout_marginTop="264dp"
        android:autofillHints="(%)"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_T"
        android:inputType="number"
        android:padding="20sp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTwo" />

    <TextView
        android:id="@+id/tvTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/txt_instruction"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOne"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etNumberV2"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:autofillHints="(%)"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_V2"
        android:inputType="number"
        android:padding="20sp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTwo" />

    <EditText
        android:id="@+id/etNumberV1"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:autofillHints="(%)"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/txt_V1"
        android:inputType="number"
        android:padding="18sp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTwo" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_compute"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumberV2" />


</androidx.constraintlayout.widget.ConstraintLayout>